--- a/practica2/practica2.csproj
+++ b/practica2/practica2.csproj
@@ -6,19 +6,16 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
    <ItemGroup>
-    <PackageReference Include="AutoMapper" Version="12.0.0"/>
-    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0"/>
-    <PackageReference Include="NLog" Version="5.1.1"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.sqlite" Versio="3.1.0"/>
-    <PackageReference Include="AutoMapper" Version="12.0.0"/>
-    <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.2.0"/>
+    <PackageReference Include="AutoMapper" Version="12.0.0" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+    <PackageReference Include="NLog" Version="5.1.0"/>
+    <PackageReference Include="NLog.Web.AspNetCore" Version="5.2.0"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.sqlite" Versio="3.1.0" />
+    <PackageReference Include="AutoMapper" Version="12.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.2.0" />
     <Content Include="Base/practica2.db">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
-    <ItemGroup>
-    <None Update="NLog.Config" >
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
+
 </Project>
